[gd_scene load_steps=3 format=3 uid="uid://lauwp8okd1vh"]

[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/keyboard/virtual_keyboard_2d.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bg6poxy7n2g6j" path="res://addons/godot-xr-tools/objects/keyboard/virtual_key.tscn" id="2"]

[node name="VirtualKeyboard2D" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_left = 3.0
offset_top = 178.0
offset_right = 399.0
offset_bottom = 357.0
color = Color(0.27451, 0.27451, 0.27451, 1)

[node name="LowerCase" type="Node2D" parent="Background"]
position = Vector2(0, 30)

[node name="VirtualKeyLowerQ" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 3.0
offset_top = 5.0
offset_right = 33.0
offset_bottom = 36.0
text = "q"
scan_code_text = "Q"
unicode = 113

[node name="VirtualKeyLowerW" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 40.0
offset_top = 5.0
offset_right = 70.0
offset_bottom = 36.0
text = "w"
scan_code_text = "W"
unicode = 119

[node name="VirtualKeyLowerE" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 80.0
offset_top = 5.0
offset_right = 110.0
offset_bottom = 36.0
text = "e"
scan_code_text = "E"
unicode = 101

[node name="VirtualKeyLowerR" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 120.0
offset_top = 5.0
offset_right = 150.0
offset_bottom = 36.0
text = "r"
scan_code_text = "R"
unicode = 114

[node name="VirtualKeyLowerT" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 160.0
offset_top = 5.0
offset_right = 190.0
offset_bottom = 36.0
text = "t"
scan_code_text = "T"
unicode = 116

[node name="VirtualKeyLowerY" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 200.0
offset_top = 5.0
offset_right = 230.0
offset_bottom = 36.0
text = "y"
scan_code_text = "Y"
unicode = 121

[node name="VirtualKeyLowerU" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 240.0
offset_top = 5.0
offset_right = 270.0
offset_bottom = 36.0
text = "u"
scan_code_text = "U"
unicode = 117

[node name="VirtualKeyLowerI" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 280.0
offset_top = 5.0
offset_right = 310.0
offset_bottom = 36.0
text = "i"
scan_code_text = "I"
unicode = 105

[node name="VirtualKeyLowerO" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 320.0
offset_top = 5.0
offset_right = 350.0
offset_bottom = 36.0
text = "o"
scan_code_text = "O"
unicode = 111

[node name="VirtualKeyLowerP" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 360.0
offset_top = 5.0
offset_right = 390.0
offset_bottom = 36.0
text = "p"
scan_code_text = "P"
unicode = 112

[node name="VirtualKeyLowerA" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 20.0
offset_top = 40.0
offset_right = 50.0
offset_bottom = 71.0
text = "a"
scan_code_text = "A"
unicode = 97

[node name="VirtualKeyLowerS" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 60.0
offset_top = 40.0
offset_right = 90.0
offset_bottom = 71.0
text = "s"
scan_code_text = "S"
unicode = 115

[node name="VirtualKeyLowerD" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 100.0
offset_top = 40.0
offset_right = 130.0
offset_bottom = 71.0
text = "d"
scan_code_text = "D"
unicode = 100

[node name="VirtualKeyLowerF" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 140.0
offset_top = 40.0
offset_right = 170.0
offset_bottom = 71.0
text = "f"
scan_code_text = "F"
unicode = 102

[node name="VirtualKeyLowerG" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 180.0
offset_top = 40.0
offset_right = 210.0
offset_bottom = 71.0
text = "g"
scan_code_text = "G"
unicode = 103

[node name="VirtualKeyLowerH" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 220.0
offset_top = 40.0
offset_right = 250.0
offset_bottom = 71.0
text = "h"
scan_code_text = "H"
unicode = 104

[node name="VirtualKeyLowerJ" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 260.0
offset_top = 40.0
offset_right = 290.0
offset_bottom = 71.0
text = "j"
scan_code_text = "J"
unicode = 106

[node name="VirtualKeyLowerK" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 300.0
offset_top = 40.0
offset_right = 330.0
offset_bottom = 71.0
text = "k"
scan_code_text = "K"
unicode = 107

[node name="VirtualKeyLowerL" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 340.0
offset_top = 40.0
offset_right = 370.0
offset_bottom = 71.0
text = "l"
scan_code_text = "L"
unicode = 108

[node name="VirtualKeyLowerZ" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 63.0
offset_top = 76.0
offset_right = 93.0
offset_bottom = 107.0
text = "z"
scan_code_text = "Z"
unicode = 122

[node name="VirtualKeyLowerX" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 100.0
offset_top = 76.0
offset_right = 130.0
offset_bottom = 107.0
text = "x"
scan_code_text = "X"
unicode = 120

[node name="VirtualKeyLowerC" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 140.0
offset_top = 76.0
offset_right = 170.0
offset_bottom = 107.0
text = "c"
scan_code_text = "C"
unicode = 99

[node name="VirtualKeyLowerV" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 180.0
offset_top = 76.0
offset_right = 210.0
offset_bottom = 107.0
text = "v"
scan_code_text = "V"
unicode = 118

[node name="VirtualKeyLowerB" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 220.0
offset_top = 76.0
offset_right = 250.0
offset_bottom = 107.0
text = "b"
scan_code_text = "B"
unicode = 98

[node name="VirtualKeyLowerN" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 260.0
offset_top = 76.0
offset_right = 290.0
offset_bottom = 107.0
text = "n"
scan_code_text = "N"
unicode = 110

[node name="VirtualKeyLowerM" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 301.0
offset_top = 76.0
offset_right = 331.0
offset_bottom = 107.0
text = "m"
scan_code_text = "M"
unicode = 109

[node name="VirtualKeyBackspace" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 341.0
offset_top = 76.0
offset_right = 391.0
offset_bottom = 107.0
text = "BKSP"
scan_code_text = "BackSpace"

[node name="negation" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 10.0
offset_top = -29.0
offset_right = 76.0
offset_bottom = 2.0
text = "¬"
scan_code_text = "¬"
unicode = 172

[node name="and" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 86.0
offset_top = -29.0
offset_right = 152.0
offset_bottom = 2.0
text = "∧"
scan_code_text = "∧"
unicode = 8743

[node name="or" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 162.0
offset_top = -29.0
offset_right = 228.0
offset_bottom = 2.0
text = "∨"
scan_code_text = "∨"
unicode = 8744

[node name="if" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 238.0
offset_top = -29.0
offset_right = 304.0
offset_bottom = 2.0
text = "→"
scan_code_text = "→"
unicode = 8594

[node name="iff" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 313.0
offset_top = -29.0
offset_right = 379.0
offset_bottom = 2.0
text = "↔"
scan_code_text = "↔"
unicode = 8596

[node name="Confirm" type="Button" parent="Background/LowerCase"]
offset_left = 144.0
offset_top = 112.0
offset_right = 257.0
offset_bottom = 143.0
text = "     Confirm     "

[node name="Clear" type="Button" parent="Background/LowerCase"]
visible = false
offset_left = 3.0
offset_top = 87.0
offset_right = 52.0
offset_bottom = 118.0
text = "Clear"

[node name="VirtualKeyParenLeft" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 274.0
offset_top = 112.0
offset_right = 332.0
offset_bottom = 143.0
text = "("
scan_code_text = "ParenLeft"
unicode = 40

[node name="VirtualKeyParenRight" parent="Background/LowerCase" instance=ExtResource("2")]
offset_left = 334.0
offset_top = 112.0
offset_right = 393.0
offset_bottom = 143.0
text = ")"
scan_code_text = "ParenRight"
unicode = 41

[node name="ColorRect" type="ColorRect" parent="Background"]
layout_mode = 0
offset_left = 399.0
offset_top = -179.0
offset_right = 567.0
offset_bottom = 221.0
color = Color(0.27451, 0.27451, 0.27451, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Background/ColorRect"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 216.0
offset_bottom = 526.0
scale = Vector2(0.75, 0.75)

[node name="Assumption" type="Button" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Assumption"

[node name="Negation Introduction" type="Button" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Negation Introduction"

[node name="Negation Elimination" type="Button" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Negation Elimination"

[node name="Conjunction Introduction" type="Button" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Conjunction Introduction"

[node name="Conjunction Elimination" type="Button" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Conjunction Elimination"

[node name="Disjunction Introduction" type="Button" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Disjunction Introduction
"

[node name="Disjunction Elimination" type="Button" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Disjunction Elimination"

[node name="Conditional Introduction" type="Button" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Conditional Introduction"

[node name="Conditional Elimination" type="Button" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Conditional Elimination"

[node name="Biconditional Introduction" type="Button" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Biconditional Introduction
"

[node name="Biconditional Elimination" type="Button" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Biconditional Elimination"

[node name="Universal Introduction" type="Button" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Universal Introduction"

[node name="Universal Elimination" type="Button" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Universal Elimination"

[node name="Existential Introduction" type="Button" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Existential Introduction"

[node name="Existential Elimination" type="Button" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Existential Elimination
"

[node name="ColorRect2" type="ColorRect" parent="Background"]
layout_mode = 0
offset_left = 1.0
offset_top = -71.0
offset_right = 396.0
offset_bottom = -7.0
color = Color(0.27451, 0.27451, 0.27451, 1)

[connection signal="pressed" from="Background/LowerCase/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Assumption" to="." method="_on_assumption_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Negation Introduction" to="." method="_on_negation_introduction_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Negation Elimination" to="." method="_on_negation_elimination_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Conjunction Introduction" to="." method="_on_conjunction_introduction_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Conjunction Elimination" to="." method="_on_conjunction_elimination_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Disjunction Introduction" to="." method="_on_disjunction_introduction_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Disjunction Elimination" to="." method="_on_disjunction_elimination_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Conditional Introduction" to="." method="_on_conditional_introduction_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Conditional Elimination" to="." method="_on_conditional_elimination_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Biconditional Introduction" to="." method="_on_biconditional_introduction_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Biconditional Elimination" to="." method="_on_biconditional_elimination_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Universal Introduction" to="." method="_on_universal_introduction_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Universal Elimination" to="." method="_on_universal_elimination_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Existential Introduction" to="." method="_on_existential_introduction_pressed"]
[connection signal="pressed" from="Background/ColorRect/VBoxContainer/Existential Elimination" to="." method="_on_existential_elimination_pressed"]
